--- a/CoreUtilities/LJCDocLib/GenDocScript/App.config
+++ b/CoreUtilities/LJCDocLib/GenDocScript/App.config
@@ -7,7 +7,7 @@
     <add key="BeginColor" value="AliceBlue" />
     <add key="ConnectionString" value="Data Source=DESKTOP-PDPBE34;Initial Catalog=SalesData;Integrated Security=True" />
     <add key="ConnectionType" value="SQLServer" />
-    <add key="DataConfigName" value="LJCData" />
+    <add key="DataConfigName" value="TestData" />
     <add key="EndColor" value="LightSkyBlue" />
     <add key="LocalDbDataAccess" value="true" />
     <add key="LocalDbService" value="false" />
