--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/App.config
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="BeginColor" value="AliceBlue"/>
     <add key="ConnectionType" value="SQLServer"/>
-    <add key="DataConfigName" value="LJCData"/>
+    <add key="DataConfigName" value="TestData"/>
     <add key="EndColor" value="225, 235, 245"/>
     <add key="LocalDbDataAccess" value="true"/>
     <add key="LocalDbService" value="false"/>
