--- a/CoreUtilities/LJCDocLib/LJCDocGen/App.config
+++ b/CoreUtilities/LJCDocLib/LJCDocGen/App.config
@@ -4,4 +4,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
+  <appSettings>
+    <add key="BeginColor" value="AliceBlue" />
+    <add key="DataConfigName" value="TestData" />
+    <add key="EndColor" value="LightSkyBlue" />
+  </appSettings>
 </configuration>
