--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
@@ -128,6 +128,12 @@
       <DependentUpon>ClassHeadingSelect.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ClassTab\ClassItemGridCode.cs" />
+    <Compile Include="Forms\DataConfigDetail.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\DataConfigDetail.Designer.cs">
+      <DependentUpon>DataConfigDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\LJCGenDocList.cs">
       <SubType>Form</SubType>
     </Compile>
