--- a/CoreUtilities/LJCDocLib/GenDocScript/GenDocScript.csproj
+++ b/CoreUtilities/LJCDocLib/GenDocScript/GenDocScript.csproj
@@ -83,9 +83,9 @@
     <None Include="bin\Debug\GenDocScript.exe.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LJCDocLibDAL\LJCDocLibDAL.csproj">
+    <ProjectReference Include="..\LJCDocLibDAL\LJCGenDocDAL.csproj">
       <Project>{c3d5c785-74a8-473e-81b4-35e07be7832a}</Project>
-      <Name>LJCDocLibDAL</Name>
+      <Name>LJCGenDocDAL</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
