--- a/CoreUtilities/LJCDocLib/LJCDocGen/LJCDocGen.csproj
+++ b/CoreUtilities/LJCDocLib/LJCDocGen/LJCDocGen.csproj
@@ -91,9 +91,9 @@
       <Project>{2037180d-f3fd-4559-ad78-37e7f018bd33}</Project>
       <Name>LJCDocXMLObjLib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\LJCDocLibDAL\LJCDocLibDAL.csproj">
+    <ProjectReference Include="..\LJCDocLibDAL\LJCGenDocDAL.csproj">
       <Project>{c3d5c785-74a8-473e-81b4-35e07be7832a}</Project>
-      <Name>LJCDocLibDAL</Name>
+      <Name>LJCGenDocDAL</Name>
     </ProjectReference>
     <ProjectReference Include="..\LJCDocGenLib\LJCDocGenLib.csproj">
       <Project>{f946c945-9a9b-4521-ad32-696c84f52d7a}</Project>
