--- a/CoreUtilities/LJCDocLib/LJCDocLibDAL/LJCGenDocDAL.csproj
+++ b/CoreUtilities/LJCDocLib/LJCDocLibDAL/LJCGenDocDAL.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C3D5C785-74A8-473E-81B4-35E07BE7832A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>LJCDocLibDAL</RootNamespace>
-    <AssemblyName>LJCDocLibDAL</AssemblyName>
+    <RootNamespace>LJCGenDocDAL</RootNamespace>
+    <AssemblyName>LJCGenDocDAL</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -21,7 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\LJCDocLibDAL.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\LJCGenDocDAL.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
