--- a/CoreUtilities/LJCDocLib/LJCDocObjLib/LJCDocObjLib.csproj
+++ b/CoreUtilities/LJCDocLib/LJCDocObjLib/LJCDocObjLib.csproj
@@ -74,9 +74,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\LJCDocLibDAL\LJCDocLibDAL.csproj">
+    <ProjectReference Include="..\LJCDocLibDAL\LJCGenDocDAL.csproj">
       <Project>{c3d5c785-74a8-473e-81b4-35e07be7832a}</Project>
-      <Name>LJCDocLibDAL</Name>
+      <Name>LJCGenDocDAL</Name>
       <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\LJCDocXMLObjLib\LJCDocXMLObjLib.csproj">
