--- a/CoreUtilities/LJCGenDoc/LJCDocGen/LJCGenDoc.csproj
+++ b/CoreUtilities/LJCGenDoc/LJCDocGen/LJCGenDoc.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FE016559-C68F-4EF5-9653-1808E0E82482}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>LJCDocGen</RootNamespace>
-    <AssemblyName>LJCDocGen</AssemblyName>
+    <RootNamespace>LJCGenDoc</RootNamespace>
+    <AssemblyName>LJCGenDoc</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -37,7 +37,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\LJCDocGen.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\LJCGenDoc.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -75,7 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ProgramDocGen.cs" />
+    <Compile Include="ProgramGenDoc.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
