--- a/CoreUtilities/LJCGenDoc/LJCGenDoc/App.config
+++ b/CoreUtilities/LJCGenDoc/LJCGenDoc/App.config
@@ -6,6 +6,7 @@
   </startup>
   <appSettings>
     <add key="BeginColor" value="AliceBlue" />
+    <add key="ConnectionType" value="SQLServer" />
     <add key="DataConfigName" value="TestData" />
     <add key="EndColor" value="LightSkyBlue" />
   </appSettings>
