--- a/CoreAssemblies/LJCDataDetail/LJCDataDetail/App.config
+++ b/CoreAssemblies/LJCDataDetail/LJCDataDetail/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
+  <appSettings>
+    <add key="BeginColor" value="AliceBlue"/>
+    <add key="ConnectionType" value="SQLServer"/>
+    <add key="DataConfigName" value="LJCData"/>
+    <add key="EndColor" value="225, 235, 245"/>
+  </appSettings>
 </configuration>
