--- a/CoreAssemblies/LJCDBViewDAL/LJCDBViewDAL/LJCDBViewDAL.csproj
+++ b/CoreAssemblies/LJCDBViewDAL/LJCDBViewDAL/LJCDBViewDAL.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Data\Views.cs" />
     <Compile Include="Data\ViewTable.cs" />
     <Compile Include="Data\ViewTables.cs" />
+    <Compile Include="ManagersDbView.cs" />
     <Compile Include="Manager\ViewColumnManager.cs" />
     <Compile Include="Manager\ViewConditionManager.cs" />
     <Compile Include="Manager\ViewConditionSetManager.cs" />
@@ -89,7 +90,7 @@
     <Compile Include="Manager\ViewOrderByManager.cs" />
     <Compile Include="Manager\ViewTableManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewHelper.cs" />
+    <Compile Include="DataDbView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="DBScript\CreatePersonViewData.sql" />
