--- a/CoreUtilities/LJCViewEditor/LJCViewEditor/LJCViewEditor.csproj
+++ b/CoreUtilities/LJCViewEditor/LJCViewEditor/LJCViewEditor.csproj
@@ -95,6 +95,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\ViewEditorListCode.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\ViewEditSplash.cs">
       <SubType>Form</SubType>
     </Compile>
