--- a/CoreAssemblies/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
+++ b/CoreAssemblies/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
@@ -93,6 +93,7 @@
     <Content Include="Diagrams\DataMethods.html" />
     <Content Include="Diagrams\DataMethods.jpg" />
     <Content Include="Doc\ChangedNames.xml" />
+    <Content Include="Doc\DataDoc.txt" />
     <Content Include="Doc\DataManager.xml">
       <SubType>Designer</SubType>
     </Content>
