--- a/CoreAssemblies/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
+++ b/CoreAssemblies/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
@@ -97,6 +97,7 @@
     <Content Include="Doc\DataManager.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Doc\DataManagerDoc.html" />
     <Content Include="Doc\DbManager.xml" />
     <Content Include="Doc\DbServiceProxy.xml" />
     <Content Include="Doc\DbServiceRef.xml">
