--- a/CoreAssemblies/LJCDBMessage/LJCDBMessage/LJCDBMessage.csproj
+++ b/CoreAssemblies/LJCDBMessage/LJCDBMessage/LJCDBMessage.csproj
@@ -89,6 +89,7 @@
     <Content Include="Diagrams\DbRequestJoin.html" />
     <Content Include="Diagrams\DbRequestJoin.jpg" />
     <Content Include="Diagrams\DbResult.jpg" />
+    <Content Include="Doc\DataManagerDoc.html" />
     <Content Include="Doc\DbCommon.xml">
       <SubType>Designer</SubType>
     </Content>
