--- a/CoreAssemblies/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
+++ b/CoreAssemblies/LJCDBClientLib/LJCDBClientLib/LJCDBClientLib.csproj
@@ -92,6 +92,7 @@
     <Content Include="Diagrams\Configuration.jpg" />
     <Content Include="Diagrams\DataMethods.html" />
     <Content Include="Diagrams\DataMethods.jpg" />
+    <Content Include="DocPages\DataManagerCode.html" />
     <Content Include="Doc\ChangedNames.xml" />
     <Content Include="Doc\DataManager.xml">
       <SubType>Designer</SubType>
