--- a/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
+++ b/CoreUtilities/LJCGenDocEdit/LJCGenDocEdit/LJCGenDocEdit.csproj
@@ -34,13 +34,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LJCDBClientLib">
+    <Reference Include="LJCDBClientLib, Version=2.2.521.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\LJCDBClientLib.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="LJCDBMessage, Version=2.2.521.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\External\LJCDBMessage.dll</HintPath>
+    </Reference>
+    <Reference Include="LJCDBViewControls, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External\LJCDBViewControls.dll</HintPath>
+    </Reference>
+    <Reference Include="LJCDBViewDAL, Version=2.2.521.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External\LJCDBViewDAL.dll</HintPath>
     </Reference>
     <Reference Include="LJCDocObjLib">
       <HintPath>..\External\LJCDocObjLib.dll</HintPath>
@@ -53,6 +61,9 @@
     </Reference>
     <Reference Include="LJCNetCommon">
       <HintPath>..\External\LJCNetCommon.dll</HintPath>
+    </Reference>
+    <Reference Include="LJCViewEditor">
+      <HintPath>..\External\LJCViewEditor.exe</HintPath>
     </Reference>
     <Reference Include="LJCWinFormCommon">
       <HintPath>..\External\LJCWinFormCommon.dll</HintPath>
