--- a/CoreTestApps/LJCDataAccessTest/LJCDataAccessTest/LJCDataAccessTest.csproj
+++ b/CoreTestApps/LJCDataAccessTest/LJCDataAccessTest/LJCDataAccessTest.csproj
@@ -95,6 +95,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Debug\Names.txt" />
     <Content Include="bin\Debug\ConnectionTemplates.xml" />
     <Content Include="bin\Debug\DataConfigs.xml" />
   </ItemGroup>
