--- a/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/UpdateProjectFiles.csproj
+++ b/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/UpdateProjectFiles.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LJCTextDataReaderLib, Version=2.2.521.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\External\LJCTextDataReaderLib.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
