--- a/CoreUtilities/UpdateProjectFiles/ProjectFilesDAL/ProjectFilesDAL.csproj
+++ b/CoreUtilities/UpdateProjectFiles/ProjectFilesDAL/ProjectFilesDAL.csproj
@@ -49,11 +49,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\CodeGroup.cs" />
+    <Compile Include="Data\CodeGroups.cs" />
     <Compile Include="Data\CodeLine.cs" />
     <Compile Include="Data\CodeLines.cs" />
     <Compile Include="Data\Project.cs" />
     <Compile Include="Data\ProjectFile.cs" />
+    <Compile Include="Data\ProjectFiles.cs" />
+    <Compile Include="Data\Projects.cs" />
     <Compile Include="Data\Solution.cs" />
+    <Compile Include="Data\Solutions.cs" />
     <Compile Include="Manager\CodeLineManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
