--- a/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/UpdateProjectFiles.csproj
+++ b/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/UpdateProjectFiles.csproj
@@ -82,6 +82,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\CodeGroup.txt" />
+    <Content Include="bin\Debug\CodeGroupBackup.txt" />
     <Content Include="bin\Debug\CodeLine.txt" />
     <Content Include="bin\Debug\CodeLineBackup.txt" />
     <Content Include="bin\Debug\Project.txt" />
