--- a/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/App.config
+++ b/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
+  <appSettings>
+    <add key="BeginColor" value="AliceBlue"/>
+    <add key="EndColor" value="225, 235, 245"/>
+  </appSettings>
 </configuration>
