--- a/CoreUtilities/UpdateProjectFiles/ProjectFilesDAL/ProjectFilesDAL.csproj
+++ b/CoreUtilities/UpdateProjectFiles/ProjectFilesDAL/ProjectFilesDAL.csproj
@@ -49,7 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data.cs" />
+    <Compile Include="ProjectFilesData.cs" />
+    <Compile Include="DataProjectFiles.cs" />
     <Compile Include="Data\CodeGroup.cs" />
     <Compile Include="Data\CodeGroups.cs" />
     <Compile Include="Data\CodeLine.cs" />
