--- a/CoreUtilities/UpdateProjectFiles/ProjectFilesDAL/ProjectFilesDAL.csproj
+++ b/CoreUtilities/UpdateProjectFiles/ProjectFilesDAL/ProjectFilesDAL.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Doc\DataProjectFiles.xml" />
+    <Content Include="Doc\ProjectFileManager.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
