--- a/CoreUtilities/UpdateProjectFiles/SoutionDependencies/App.config
+++ b/CoreUtilities/UpdateProjectFiles/SoutionDependencies/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
+  <appSettings>
+    <add key="DependencyActionPath"
+         value="..\..\..\..\..\Dependencies" />
+  </appSettings>
 </configuration>
