--- a/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/App.config
+++ b/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/App.config
@@ -7,5 +7,7 @@
     <add key="BeginColor" value="AliceBlue"/>
     <add key="EndColor" value="225, 235, 245"/>
     <add key="DataFilePath" value="DataFiles"/>
+    <add key="DependencyActionPath"
+         value="..\..\..\..\..\Dependencies" />
   </appSettings>
 </configuration>
