--- a/CoreUtilities/UpdateProjectFiles/SoutionDependencies/App.config
+++ b/CoreUtilities/UpdateProjectFiles/SoutionDependencies/App.config
@@ -4,7 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8.1" />
     </startup>
   <appSettings>
-    <add key="DependencyActionPath"
-         value="..\..\..\..\..\Dependencies" />
+    <add key="DependencyActionPath" value="..\..\..\..\..\Dependencies" />
   </appSettings>
 </configuration>
