--- a/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/App.config
+++ b/CoreUtilities/UpdateProjectFiles/UpdateProjectFiles/App.config
@@ -6,9 +6,6 @@
   <appSettings>
     <add key="BeginColor" value="AliceBlue" />
     <add key="EndColor" value="225, 235, 245" />
-    <add key="DataFilePath"
-         value="..\..\..\..\..\Dependencies\DataFiles" />
-    <add key="DependencyActionPath"
-         value="..\..\..\..\..\Dependencies" />
+    <add key="DataFilePath" value="..\..\..\..\..\Dependencies\DataFiles" />
   </appSettings>
 </configuration>
