--- a/CoreAssemblies/LJCNetCommon/LJCNetCommon/LJCNetCommon.csproj
+++ b/CoreAssemblies/LJCNetCommon/LJCNetCommon/LJCNetCommon.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppSettings.cs" />
+    <Compile Include="ArgError.cs" />
     <Compile Include="CodeTokens\CodeTokenizer.cs" />
     <Compile Include="CodeTokens\CommonDataTypes.cs" />
     <Compile Include="CodeTokens\CommonModifiers.cs" />
