--- a/CoreUtilities/LJCGenText/LJCGenTextLib/LJCGenTextLib.csproj
+++ b/CoreUtilities/LJCGenText/LJCGenTextLib/LJCGenTextLib.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DefaultValues.cs" />
-    <Compile Include="TextGen.cs" />
+    <Compile Include="TextGenLib.cs" />
     <Compile Include="XMLData.cs" />
     <Compile Include="Directive.cs" />
     <Compile Include="GenerateText.cs" />
