--- a/CoreUtilities/CalcPad/CalcPad/CalcPad.csproj
+++ b/CoreUtilities/CalcPad/CalcPad/CalcPad.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Errors.cs" />
+    <Compile Include="Error.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
