--- a/CoreUtilities/LJCViewEditor/LJCViewEditor/App.config
+++ b/CoreUtilities/LJCViewEditor/LJCViewEditor/App.config
@@ -6,12 +6,12 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
   </startup>
   <appSettings>
-    <add key="BeginColor" value="AliceBlue"/>
+    <add key="BeginColor" value="LightBlue"/>
     <add key="ClientSettingsProvider.ServiceUri" value=""/>
     <add key="ConnectionString" value="Data Source=DESKTOP-PDPBE34\SQL2016;Initial Catalog=GenealogyData;Integrated Security=True"/>
     <add key="ConnectionType" value="SQLServer"/>
     <add key="DataConfigName" value="LJCData"/>
-    <add key="EndColor" value="LightSkyBlue"/>
+    <add key="EndColor" value="SkyBlue"/>
     <add key="LocalDbDataAccess" value="true"/>
     <add key="LocalDbService" value="false"/>
   </appSettings>
