--- a/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
+++ b/CoreUtilities/LJCDataUtility/LJCDataUtility/LJCDataUtility.csproj
@@ -39,6 +39,7 @@
     </Reference>
     <Reference Include="LJCDBClientLib">
       <HintPath>External\LJCDBClientLib.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="LJCDBMessage, Version=2.2.521.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
